--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,37 +1,45 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
-- master
+  - main  # Trigger on changes to the main branch
 
 pool:
-  vmImage: ubuntu-latest
+  name: 'notagent'
 
-strategy:
-  matrix:
-    Python38:
-      python.version: '3.8'
-    Python39:
-      python.version: '3.9'
-    Python310:
-      python.version: '3.10'
-    Python311:
-      python.version: '3.11'
+stages:
+  - stage: Build
+    displayName: Build Flask App
+    jobs:
+      - job: BuildJob
+        displayName: Build the Flask application
+        steps:
+          - task: UsePythonVersion@0
+            inputs:
+              versionSpec: '3.x'
+          - script: |
+              python -m venv venv
+              .\venv\Scripts\activate
+              pip install -r requirements.txt
+            displayName: Install Dependencies
+          - task: PublishPipelineArtifact@1
+            inputs:
+              targetPath: '$(System.DefaultWorkingDirectory)'
+              artifactName: 'flask-app'
 
-steps:
-- task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
-
-- script: |
-    python -m pip install --upgrade pip
-    pip install -r requirements.txt
-  displayName: 'Install dependencies'
-
-- script: |
-    pip install pytest pytest-azurepipelines
-    pytest
-  displayName: 'pytest'
+  - stage: Deploy
+    displayName: Deploy Flask App
+    dependsOn: Build
+    jobs:
+      - deployment: DeployToWindows
+        displayName: Deploy to Windows Machine
+        environment: 'WindowsDeployment'
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: current
+                  artifact: flask-app
+                - script: |
+                    python -m venv venv
+                    .\venv\Scripts\activate
+                    pip install -r requirements.txt
+                    python wsgi.py
+                  displayName: Run Flask App
